[gd_scene load_steps=14 format=3 uid="uid://wv7qles0purx"]

[ext_resource type="Script" path="res://src/entities/items/beam_item_laser.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b56sauj85ohr3" path="res://sprites/glowing_circle.png" id="2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fp1j4"]

[sub_resource type="Curve" id="3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.606742, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="4"]
curve = SubResource("3")

[sub_resource type="ParticleProcessMaterial" id="5"]
gravity = Vector3(0, 0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
scale_curve = SubResource("4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gjymj"]
gravity = Vector3(0, 0, 0)
initial_velocity_min = 240.0
initial_velocity_max = 240.0
scale_curve = SubResource("4")

[sub_resource type="Gradient" id="Gradient_wc8fj"]
offsets = PackedFloat32Array(0, 0.774436, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xu4n7"]
gradient = SubResource("Gradient_wc8fj")

[sub_resource type="Curve" id="Curve_4iy57"]
_data = [Vector2(0, 0.754545), 0.0, 0.0, 0, 0, Vector2(0.262195, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_nh83f"]
curve = SubResource("Curve_4iy57")

[sub_resource type="ParticleProcessMaterial" id="7"]
emission_shape = 3
emission_box_extents = Vector3(24, 32, 1)
gravity = Vector3(0, 0, 0)
linear_accel_min = 400.0
linear_accel_max = 400.0
tangential_accel_min = 200.0
tangential_accel_max = 200.0
scale_min = 0.5
scale_max = 0.75
scale_curve = SubResource("CurveTexture_nh83f")
color_ramp = SubResource("GradientTexture1D_xu4n7")

[sub_resource type="Environment" id="8"]
background_mode = 3
glow_enabled = true
glow_intensity = 0.3
glow_blend_mode = 0

[node name="RayCast2D" type="RayCast2D"]
target_position = Vector2(1500, 0)
collision_mask = 12
script = ExtResource("1")

[node name="Line2D" type="Line2D" parent="."]
material = SubResource("ShaderMaterial_fp1j4")
points = PackedVector2Array(0, 0, 100, 0)
width = 0.0
default_color = Color(0.5, 1, 6, 1)

[node name="CastingParticle" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("5")
texture = ExtResource("2")
lifetime = 0.3

[node name="ImpactParticle" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_gjymj")
texture = ExtResource("2")
lifetime = 0.3

[node name="BeamParticle" type="GPUParticles2D" parent="."]
emitting = false
amount = 24
process_material = SubResource("7")
texture = ExtResource("2")
lifetime = 0.6

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("8")
